[package]
name = "massping"
version = "0.3.6"
edition = "2021"
license = "MIT"
description = "ICMP ping library for sending batches of ICMP echo request packets and measuring the roundtrip time"
keywords = ["icmp", "ping"]
categories = ["network-programming"]
repository = "https://github.com/M4SS-Code/massping"
readme = "README.md"
rust-version = "1.70"

[package.metadata.docs.rs]
features = ["tokio/time"]
all-features = true

[dependencies]
pnet_packet = "0.35"
socket2 = { version = "0.5.1", features = ["all"] }

getrandom = "0.3.1"
tokio = { version = "1.25", features = ["net", "sync", "rt"] }

# stream
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.25", features = ["macros", "time"] }
futures-util = { version = "0.3", default-features = false }

[features]
default = ["strong", "stream"]
strong = []
stream = ["dep:futures-core"]
