[package]
name = "massping"
version = "0.3.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ICMP ping library for sending batches of ICMP echo request packets and measuring the roundtrip time"
keywords = ["icmp", "ping"]
categories = ["network-programming"]
repository = "https://github.com/M4SS-Code/massping"
readme = "README.md"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[dependencies]
pnet_packet = "0.35"
socket2 = { version = "0.6", features = ["all"] }

getrandom = "0.3.1"
tokio = { version = "1.25", features = ["net", "sync", "rt", "time"] }

# stream
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.25", features = ["macros"] }
futures-util = { version = "0.3", default-features = false }

[features]
default = ["stream"]
stream = ["dep:futures-core"]
